feat: implement health routes
